# Intellias_Upskill_Practice_New_2

./: .gitignore  CPP_upskill_program.docx  SharedPtr.h
CustomSmartPointers/: CMakeLists.txt  CustomSmartPointers.slnx
CustomSmartPointers/IPtr/: IPtr.h
CustomSmartPointers/Pointers/: CMakeLists.txt  Helper.h  SharedPtr.h  UniquePtr.h  WeakPtr.h
CustomSmartPointers/UniquePtr/: UniquePtr.h
CustomSmartPointers/_Tests/: CMakeLists.txt  SharedPtrTest.cpp  UniquePtrTest.cpp  UniquePtrTest.h  WeakPtrTest.cpp  pch.h
CustomSmartPointers/src/: SharedPtr.h  WeakPtr.h
CustomSmartPointers/tests/: UniquePtrTest.h  pch.h
VariadicTemplates/: CMakeLists.txt
VariadicTemplates/src/: Any.h  CMakeLists.txt  Optional.h  Tuple.h  Variant.h
VariadicTemplates/tests/: AnyTests.cpp  CMakeLists.txt  OptionalTest.cpp  TupleTest.cpp  VariantTest.cpp
